# mlz-face-recognition

./: .gitignore  Dockerfile  README.md  download_data.sh  labels.json  notebook.ipynb  predict.py  pyproject.toml  render.yaml  test.py  train.py  train_utils.py
